{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 1142,
  "lineage": "957c5c75-9852-9dfd-71fa-7566a78e4f05",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:security-group/sg-0869346cc29b43465",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0869346cc29b43465",
            "ingress": [],
            "name": "renny-production-b420b79-cluster-2025100119281183810000000c",
            "name_prefix": "renny-production-b420b79-cluster-",
            "owner_id": "722136182380",
            "revoke_rules_on_delete": false,
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-cluster",
              "Project": "renny"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-cluster",
              "Project": "renny"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:security-group/sg-0e083cd9a540cd4f2",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0e083cd9a540cd4f2",
            "ingress": [],
            "name": "renny-production-b420b79-node-2025100119281256660000000e",
            "name_prefix": "renny-production-b420b79-node-",
            "owner_id": "722136182380",
            "revoke_rules_on_delete": false,
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-node",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "owned"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-node",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "To node 1025-65535",
            "from_port": 1025,
            "id": "sgrule-3697068427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0869346cc29b43465",
            "security_group_rule_id": "sgr-08119e6c6b842594b",
            "self": false,
            "source_security_group_id": "sg-0e083cd9a540cd4f2",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1216216579",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0869346cc29b43465",
            "security_group_rule_id": "sgr-0e4fb58702a5b079b",
            "self": false,
            "source_security_group_id": "sg-0e083cd9a540cd4f2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_turn_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "TURN TCP",
            "from_port": 3478,
            "id": "sgrule-1573798885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0869346cc29b43465",
            "security_group_rule_id": "sgr-0d201caaf2837ef68",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3478,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_turn_tls",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "TURN TLS",
            "from_port": 5349,
            "id": "sgrule-3418539844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0869346cc29b43465",
            "security_group_rule_id": "sgr-05c020dc4708129f0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5349,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_turn_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "TURN UDP",
            "from_port": 3478,
            "id": "sgrule-587309437",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0869346cc29b43465",
            "security_group_rule_id": "sgr-0c4c177670cf35714",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3478,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_webrtc_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "WebRTC UDP Range",
            "from_port": 22000,
            "id": "sgrule-297163102",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0869346cc29b43465",
            "security_group_rule_id": "sgr-043a21a5d46b502c8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 23000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-1805157878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-0ef48a703e9b02017",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2888813634",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-088ea961d489e38ad",
            "self": false,
            "source_security_group_id": "sg-0869346cc29b43465",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-4028131593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-02651921879a20b09",
            "self": false,
            "source_security_group_id": "sg-0869346cc29b43465",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-962203295",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-0bbc2a72c416824e4",
            "self": false,
            "source_security_group_id": "sg-0869346cc29b43465",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-705049278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-02a19fd23bd2e0dc2",
            "self": false,
            "source_security_group_id": "sg-0869346cc29b43465",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1319567733",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-0469a24b8e0a961d7",
            "self": false,
            "source_security_group_id": "sg-0869346cc29b43465",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4266599193",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-07cd2c8be930f61c3",
            "self": false,
            "source_security_group_id": "sg-0869346cc29b43465",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-581138687",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-07afffde40b58023b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-126986866",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-0613a48b6e82a1456",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2998723743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-00290b4dac842080f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-383993712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-08b4860676fee906b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_webrtc_from_internet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "WebRTC from Internet",
            "from_port": 22000,
            "id": "sgrule-2327162066",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e083cd9a540cd4f2",
            "security_group_rule_id": "sgr-0691b502fdab1eec5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 23000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:network-acl/acl-0c7685d23f484b720",
            "default_network_acl_id": "acl-0c7685d23f484b720",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c7685d23f484b720",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "722136182380",
            "subnet_ids": [
              "subnet-017298e80f2ed575d",
              "subnet-046b2fc463772ae09",
              "subnet-08d243a32ed478b1f",
              "subnet-0d3f026e440fd14e6",
              "subnet-0f6b2c2a8f4e9615b"
            ],
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-default",
              "Project": "renny"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-default",
              "Project": "renny"
            },
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:route-table/rtb-0613039c8082257d5",
            "default_route_table_id": "rtb-0613039c8082257d5",
            "id": "rtb-0613039c8082257d5",
            "owner_id": "722136182380",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-default",
              "Project": "renny"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-default",
              "Project": "renny"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:security-group/sg-03f94a4c52c2af145",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03f94a4c52c2af145",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "722136182380",
            "revoke_rules_on_delete": false,
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-default",
              "Project": "renny"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-default",
              "Project": "renny"
            },
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbd5dacf1b7a954b",
            "arn": "arn:aws:ec2:us-east-1:722136182380:elastic-ip/eipalloc-0fbd5dacf1b7a954b",
            "domain": "vpc",
            "id": "eipalloc-0fbd5dacf1b7a954b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-90-230-59.compute-1.amazonaws.com",
            "public_ip": "98.90.230.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-us-east-1a",
              "Project": "renny"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-us-east-1a",
              "Project": "renny"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:internet-gateway/igw-050fab7987baca2be",
            "id": "igw-050fab7987baca2be",
            "owner_id": "722136182380",
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc",
              "Project": "renny"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc",
              "Project": "renny"
            },
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbd5dacf1b7a954b",
            "association_id": "eipassoc-0ebe925296201e017",
            "connectivity_type": "public",
            "id": "nat-0f4b401e2ce29eb02",
            "network_interface_id": "eni-01dcffa7ac870a781",
            "private_ip": "10.17.101.171",
            "public_ip": "98.90.230.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d243a32ed478b1f",
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-us-east-1a",
              "Project": "renny"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-us-east-1a",
              "Project": "renny"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-024a8c19a3734a1df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f4b401e2ce29eb02",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-024a8c19a3734a1df",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-050fab7987baca2be",
            "id": "r-rtb-0f5a3499cf98920751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f5a3499cf9892075",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:route-table/rtb-024a8c19a3734a1df",
            "id": "rtb-024a8c19a3734a1df",
            "owner_id": "722136182380",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-private",
              "Project": "renny"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-private",
              "Project": "renny"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:route-table/rtb-0f5a3499cf9892075",
            "id": "rtb-0f5a3499cf9892075",
            "owner_id": "722136182380",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-public",
              "Project": "renny"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-public",
              "Project": "renny"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0434a76e332455d25",
            "route_table_id": "rtb-024a8c19a3734a1df",
            "subnet_id": "subnet-046b2fc463772ae09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ffdeed3b88ec609",
            "route_table_id": "rtb-024a8c19a3734a1df",
            "subnet_id": "subnet-024bb68e17868d726"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057d98339b742e26f",
            "route_table_id": "rtb-024a8c19a3734a1df",
            "subnet_id": "subnet-0f6b2c2a8f4e9615b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e6f123e64153ec5",
            "route_table_id": "rtb-0f5a3499cf9892075",
            "subnet_id": "subnet-08d243a32ed478b1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfad9e00e80d5e71",
            "route_table_id": "rtb-0f5a3499cf9892075",
            "subnet_id": "subnet-0d3f026e440fd14e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f5f5b5700d15694",
            "route_table_id": "rtb-0f5a3499cf9892075",
            "subnet_id": "subnet-017298e80f2ed575d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:subnet/subnet-046b2fc463772ae09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046b2fc463772ae09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722136182380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-private-us-east-1a",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-private-us-east-1a",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:subnet/subnet-024bb68e17868d726",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024bb68e17868d726",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722136182380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-private-us-east-1b",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-private-us-east-1b",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:subnet/subnet-0f6b2c2a8f4e9615b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.17.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6b2c2a8f4e9615b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722136182380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-private-us-east-1c",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-private-us-east-1c",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:subnet/subnet-08d243a32ed478b1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.17.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d243a32ed478b1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722136182380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-public-us-east-1a",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-public-us-east-1a",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:subnet/subnet-0d3f026e440fd14e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.17.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3f026e440fd14e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722136182380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-public-us-east-1b",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-public-us-east-1b",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:subnet/subnet-017298e80f2ed575d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.17.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017298e80f2ed575d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722136182380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-public-us-east-1c",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc-public-us-east-1c",
              "Project": "renny",
              "kubernetes.io/cluster/renny-production-b420b79": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02bb3ba2b1ca7d6d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722136182380:vpc/vpc-02bb3ba2b1ca7d6d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.17.0.0/16",
            "default_network_acl_id": "acl-0c7685d23f484b720",
            "default_route_table_id": "rtb-0613039c8082257d5",
            "default_security_group_id": "sg-03f94a4c52c2af145",
            "dhcp_options_id": "dopt-0979f15a720402574",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02bb3ba2b1ca7d6d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0613039c8082257d5",
            "owner_id": "722136182380",
            "tags": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc",
              "Project": "renny"
            },
            "tags_all": {
              "DeploymentId": "b420b79",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "renny-production-b420b79-vpc",
              "Project": "renny"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}